Creates Java/jvm/images/13.png
Auto commit by GitBook Editor